Api Binding Test Case to check Swagger for Security Services
